--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "ethers": "^6.10.0",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "qrcode": "^1.5.4"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-ethers": "^3.0.0",
